Bug 208813 - Have trace-cmd stat show notrace pid
Summary: Have trace-cmd stat show notrace pid
Status: RESOLVED CODE_FIX
Alias: None
Product: Tools
Classification: Unclassified
Component: Trace-cmd/Kernelshark (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Default virtual assignee for Trace-cmd and kernelshark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-05 00:10 UTC by Steven Rostedt
Modified: 2023-06-02 08:16 UTC (History)
0 users

See Also:
Kernel Version: N/A
Subsystem:
Regression: No
Bisected commit-id:


Attachments

Description Steven Rostedt 2020-08-05 00:10:53 UTC
I noticed that trace-cmd stat does not show if set_ftrace_notrace_pid has anything in it. It also misses set_event_notrace_pid.
Comment 1 Steven Rostedt 2023-06-02 08:16:38 UTC
Fixed-by: dda563c96aa00 ("trace-cmd stat: Show set_event_notrace_pid entries")

Note You need to log in before you can comment on or make changes to this bug.