trace-cmd stat: Show set_event_notrace_pid entries

Have trace-cmd stat list the PIDs that are in the set_event_notrace_pid.

Link: https://lore.kernel.org/linux-trace-devel/20220608163152.425352-2-rostedt@goodmis.org

Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=208813
Signed-off-by: Steven Rostedt (Google) <rostedt@goodmis.org>